Fixes social icons on mobile

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -285,8 +285,8 @@ pre {
     .social-media-list {
       li {
         a {
-          max-height: 21px;
-          max-width: 18px;
+          max-height: 24px;
+          max-width: 21px;
         }
       }
     }
